[project]
name = "projet-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.37",
    "dotenv>=0.9.9",
    "googletrans>=4.0.2",
    "imblearn>=0.0",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "streamlit>=1.44.1",
]
